<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".presentador.MapasActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/table">
        </TableLayout>

    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bizkaia"
        android:id="@+id/bizkaiaButton"
        android:layout_below="@+id/scrollView"
        android:layout_alignRight="@+id/scrollView"
        android:layout_alignEnd="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/araba"
        android:id="@+id/arabaButton"
        android:layout_below="@+id/bizkaiaButton"
        android:layout_alignRight="@+id/bizkaiaButton"
        android:layout_alignEnd="@+id/bizkaiaButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gipuzkoa"
        android:id="@+id/gipuzkoaButton"
        android:layout_below="@+id/arabaButton"
        android:layout_alignRight="@+id/arabaButton"
        android:layout_alignEnd="@+id/arabaButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ocio"
        android:id="@+id/ocioButton"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/scrollView"
        android:layout_alignEnd="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gastronomia"
        android:id="@+id/gastronomiaButton"
        android:layout_alignTop="@+id/arabaButton"
        android:layout_alignRight="@+id/arabaButton"
        android:layout_alignEnd="@+id/arabaButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arte"
        android:id="@+id/arteButton"
        android:layout_alignBottom="@+id/gipuzkoaButton"
        android:layout_alignRight="@+id/arabaButton"
        android:layout_alignEnd="@+id/arabaButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deporte"
        android:id="@+id/deporteButton"
        android:layout_below="@+id/gipuzkoaButton"
        android:layout_alignRight="@+id/gipuzkoaButton"
        android:layout_alignEnd="@+id/gipuzkoaButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edificios"
        android:id="@+id/edificiosButton"
        android:layout_below="@+id/deporteButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lugares"
        android:id="@+id/lugaresButton"
        android:layout_below="@+id/edificiosButton"
        android:layout_alignRight="@+id/edificiosButton"
        android:layout_alignEnd="@+id/edificiosButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"/>
</RelativeLayout>
